--- a/src/css/App.css
+++ b/src/css/App.css
@@ -22,3 +22,13 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.menu{
+  width: 10%;
+  float: left;
+}
+
+.menu-item {
+  background-color:deepskyblue;
+  text-decoration-color: white;
+}
